<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:background="@drawable/backgroundfour"
    android:layout_height="match_parent"
    android:splitMotionEvents="false"

    tools:context="com.atwyn.android.abc.Login">
    <include layout="@layout/activity_toolbar"
      ></include>
  <!--  <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cred"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="7dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="2dp"

            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            app:srcCompat="@mipmap/abctextlogo"/>

    </android.support.v7.widget.Toolbar>
-->



    <ImageView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="80dp"

        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
android:src="@drawable/admin"


        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true" />
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"


        android:layout_below="@+id/login_title"
        android:layout_alignParentStart="true"
        android:id="@+id/scrollView2">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"

            android:layout_height="400dp">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:id="@+id/relativeLayout">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:id="@+id/linearLayout2">



                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:drawableLeft="@mipmap/username"
                    android:drawableTint="@color/cred"
                    android:id="@+id/editText_user"
                    android:hint="User Name"
                    android:drawablePadding="10dp"
                    android:textColor="@color/colorblack"
                    android:paddingLeft="5dp"
                    android:background="@drawable/edittext"
                    android:inputType="textEmailAddress" />




                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/editText_password"
                    android:drawableLeft="@mipmap/pass"
                    android:drawableTint="@color/cred"
                    android:hint="Password"
                    android:drawablePadding="10dp"
                    android:textColor="@color/colorblack"
                    android:paddingLeft="5dp"
                    android:background="@drawable/edittext"
                    android:inputType="numberPassword" />




            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="@color/cred"
                android:text="Sign in"
                android:id="@+id/sign_in_button"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/user_profile_image_background"
        android:elevation="4dp"
        android:src="@mipmap/abccircle" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
